fix: Client card images distortion fixed

--- a/src/components/Home/Index.scss
+++ b/src/components/Home/Index.scss
@@ -19,7 +19,7 @@
     opacity: .7;
 }
 
-.hm-pg img {
+.hm-pg .hm-img {
     position: absolute;
     left: 0;
     width: 100%;
